# carefree-pyo3

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
cfpyo3/_rs/df/: __init__.pyi  frame.pyi
cfpyo3/_rs/toolkit/: array.pyi
cfpyo3/df/: frame.py
cfpyo3/toolkit/: array.py  misc.py
cfpyo3_rs_bindings/: Cargo.toml
cfpyo3_rs_bindings/src/: df.rs  lib.rs
cfpyo3_rs_bindings/src/df/: io.rs  meta.rs  ops.rs
cfpyo3_rs_core/: Cargo.toml
cfpyo3_rs_core/benches/: array.rs  df.rs
cfpyo3_rs_core/src/: df.rs  io.rs  lib.rs  py.rs
cfpyo3_rs_core/src/df/: frame.rs  io.rs  meta.rs  ops.rs
cfpyo3_rs_core/src/df/frame/: io.rs  meta.rs
cfpyo3_rs_core/src/df/frame/io/: buffer.rs  bytes.rs  opendal.rs
cfpyo3_rs_core/src/df/io/: buffer.rs  bytes.rs  fs.rs
cfpyo3_rs_core/src/io/: temporal.rs
cfpyo3_rs_core/src/io/temporal/: mem.rs  source.rs
cfpyo3_rs_core/src/io/temporal/mem/: fetchers.rs  redis.rs  shm.rs
cfpyo3_rs_core/src/io/temporal/mem/fetchers/: redis.rs
cfpyo3_rs_core/src/io/temporal/source/: s3.rs
cfpyo3_rs_core/src/py/: df.rs
cfpyo3_rs_core/src/py/df/: io.rs  meta.rs
cfpyo3_rs_core/src/toolkit/: array.rs  convert.rs  misc.rs  queue.rs
cfpyo3_rs_py/src/: df.rs  lib.rs
cfpyo3_rs_py/src/df/: frame.rs  io.rs  meta.rs  ops.rs
cfpyo3_rs_py/src/df/frame/: meta.rs
src/: df.rs  lib.rs
src/df/: frame.rs
src/df/frame/: indexing.rs  meta.rs  ops.rs
src/toolkit/: array.rs
tests/test_df/: test_frame.py
tests/test_toolkit/: test_array.py  test_misc.py
