[package]
name = "carefree-pyo3"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cfpyo3"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.13.0"
md-5 = "0.10.6"
numpy = "0.21.0"
pyo3 = { version = "0.21.0", features = ["abi3-py38", "chrono", "extension-module"] }
rayon = "1.10.0"
